src/objects/EC_Email__c.object
<CustomObject>
    <fields>
        <fullName>Action_Link__c</fullName>
        <label>Action Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Call_to_Action__c</fullName>
        <label>Call to Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EC_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Exhibitor Order</label>
        <referenceTo>EC_Order__c</referenceTo>
        <relationshipLabel>Exhibitor Emails</relationshipLabel>
        <relationshipName>Exhibitor_Emails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exhibitor_Setting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Exhibitor Setting</label>
        <referenceTo>EC_Exhibitor_Setting__c</referenceTo>
        <relationshipLabel>Exhibitor Emails</relationshipLabel>
        <relationshipName>Exhibitor_Emails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Send_Test_To__c</fullName>
        <label>Send Test To</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_Body__c</fullName>
        <label>Template Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Template_Name__c</fullName>
        <label>Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Exhibitor Email</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EE-{0000}</displayFormat>
        <label>Email Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exhibitor Emails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>